--- a/index.html
+++ b/index.html
@@ -3,9 +3,68 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
-    <link rel="stylesheet" href="index.css">
-    <script src="index.js"></script>
+    <style>
+        body {
+            padding: 50px;
+        }
+
+        .label-area .label {
+            border: 1px solid grey;
+            cursor: pointer;
+        }
+
+        .label-area .buttons button {
+            cursor: pointer;
+        }
+    </style>
 </head>
 <body>
+<script>
+    function changeBackgroundColor(e) {
+        e.target.style.backgroundColor = `#${Math.floor(Math.random()*16777215).toString(16)}`;
+    }
+
+    function addButtons(e) {
+        const buttonBox = document.createElement('button');
+        buttonBox.innerText = 'Box';
+        buttonBox.addEventListener('click', changeBackgroundColor);
+
+        const buttons = document.createElement('span');
+        buttons.className = 'buttons';
+        buttons.append(buttonBox);
+        createLabelArea(buttons);
+
+        e.target.append(buttons);
+    }
+
+    function removeButtons(e) {
+        const target = e.target;
+        for (let i = 0; i < target.childNodes.length; i++) {
+            if (target.childNodes[i].className === 'buttons') {
+                target.removeChild(target.childNodes[i]);
+                break;
+            }
+        }
+    }
+
+    function createLabelArea(target) {
+        const label = document.createElement('label');
+        label.innerText = 'Add';
+        label.className = 'label';
+
+        const labelArea = document.createElement('span');
+        labelArea.className = 'label-area';
+        labelArea.append(label);
+        labelArea.addEventListener('mouseenter', addButtons);
+        labelArea.addEventListener('mouseleave', removeButtons);
+
+        target.append(labelArea);
+    }
+
+
+    document.addEventListener('DOMContentLoaded', () => {
+        createLabelArea(document.body);
+    });
+</script>
 </body>
 </html>
